--- a/blog-grid-1.html
+++ b/blog-grid-1.html
@@ -152,11 +152,11 @@
                                 </a>
                             </div>
                             <a href="#" id="login_or_usercent">
-                            <div class="user-icon account">
-                                <img class="fa-light fa-user" src="" id="avatar">
-                            </div>
+                                <div class="user-icon account">
+                                    <img class="fa-light fa-user" src="" id="avatar">
+                                </div>
                             </a>
-                            
+
                         </div>
                         <a href="register.html" class="d-xl-none d-flex main-menu__toggler mobile-nav__toggler">
                             <img src="static/picture/menu-2.png" alt="">
@@ -407,6 +407,7 @@
     <script src="static/js/login.js"></script>
     <script src="static/js/user_icon.js"></script>
     <script src="static/js/fuzzySearch.js"></script>
+    <script src="static/js/config.js"></script>
 
 </body>
 
