--- a/coming-soon.html
+++ b/coming-soon.html
@@ -78,10 +78,14 @@
                         </div>
                         <div class="newsletter-container">
                             <form method="post" class="newsletter-form">
-                                <input type="email" class="form-control form-control-nav bg-transparent" placeholder="输入您的电子邮件">
+                                <input type="email" class="form-control form-control-nav bg-transparent"
+                                    placeholder="输入您的电子邮件">
                                 <button type="submit">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewbox="0 0 20 20" fill="none">
-                                        <path d="M19.8283 0.171647C19.6625 0.00586635 19.4138 -0.0451101 19.1963 0.041921L0.368218 7.57308C0.152789 7.65925 0.00853097 7.86441 0.00024974 8.09632C-0.00799243 8.32819 0.121382 8.54308 0.330132 8.64433L7.75465 12.2451L11.3555 19.6697C11.4537 19.8722 11.6588 19.9999 11.8826 19.9999C11.8895 19.9999 11.8965 19.9998 11.9035 19.9995C12.1353 19.9913 12.3406 19.847 12.4267 19.6316L19.9579 0.803599C20.045 0.585943 19.994 0.337389 19.8283 0.171647ZM2.03478 8.16862L16.9811 2.19016L8.07371 11.0974L2.03478 8.16862ZM11.8312 17.9651L8.90234 11.926L17.8097 3.01875L11.8312 17.9651Z" fill="#1E1F20"></path>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewbox="0 0 20 20"
+                                        fill="none">
+                                        <path
+                                            d="M19.8283 0.171647C19.6625 0.00586635 19.4138 -0.0451101 19.1963 0.041921L0.368218 7.57308C0.152789 7.65925 0.00853097 7.86441 0.00024974 8.09632C-0.00799243 8.32819 0.121382 8.54308 0.330132 8.64433L7.75465 12.2451L11.3555 19.6697C11.4537 19.8722 11.6588 19.9999 11.8826 19.9999C11.8895 19.9999 11.8965 19.9998 11.9035 19.9995C12.1353 19.9913 12.3406 19.847 12.4267 19.6316L19.9579 0.803599C20.045 0.585943 19.994 0.337389 19.8283 0.171647ZM2.03478 8.16862L16.9811 2.19016L8.07371 11.0974L2.03478 8.16862ZM11.8312 17.9651L8.90234 11.926L17.8097 3.01875L11.8312 17.9651Z"
+                                            fill="#1E1F20"></path>
                                     </svg>
                                 </button>
                             </form>
@@ -90,7 +94,7 @@
                 </div>
             </div>
         </section>
-        <!-- 即将到来的页面结束 --> 
+        <!-- 即将到来的页面结束 -->
 
     </div>
     <!-- 主要内容结束 -->
@@ -100,6 +104,7 @@
     <!-- 返回顶部按钮结束 -->
 
     <!-- JQuery 和 JavaScript 文件 -->
+    <script src="static/js/config.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/jquery-3.6.3.min.js"></script>
     <script src="static/js/jquery.countdown.min.js"></script>
