--- a/login.html
+++ b/login.html
@@ -316,6 +316,7 @@
     <!-- 移动菜单结束 -->
 
     <!-- Jquery JS -->
+    <script src="static/js/config.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/jquery-3.6.3.min.js"></script>
